--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <title>tradework-hub</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>Trade Ease</title>
+    <meta name="description" content="Trade Ease - Trade Management Platform" />
     <meta name="author" content="Lovable" />
     <meta property="og:image" content="/og-image.png" />
   </head>
