Refactor Google Maps API key handling to use import.meta.env for improved compatibility
- Updated .env file to clarify environment variable usage.
- Modified test-maps.html to access the Google Maps API key from window.ENV for better integration.
- Refactored google-maps.ts to utilize import.meta.env for API key and map ID retrieval, enhancing compatibility with modern build tools.

--- a/public/test-maps.html
+++ b/public/test-maps.html
@@ -55,7 +55,7 @@
 
     <script>
         // Get API key from environment variable
-        const apiKey = process.env.VITE_GOOGLE_MAPS_API_KEY;
+        const apiKey = window.ENV?.VITE_GOOGLE_MAPS_API_KEY;
         
         if (!apiKey) {
             document.body.innerHTML = '<div style="color: red;">Error: Google Maps API key not configured</div>';
